--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An API REST using express.js",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,10 +20,12 @@
   "author": "Nicolas MG",
   "license": "ISC",
   "bugs": {
-    "url":  "https://github.com/DebiantNico/Portafolio_De_Evidencias/issues"
-  }, 
+    "url": "https://github.com/DebiantNico/Portafolio_De_Evidencias/issues"
+  },
   "homepage": "https://github.com/DebiantNico/Portafolio_De_Evidencias#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.4"
   }
 }
